less/app.less
// Core variables and mixins
@import "bootstrap/variables.less";
@import "variables-custom.less";
@import "bootstrap/mixins.less";
@import "mixins-custom.less";

// Font Awesome
@import "font-awesome/font-awesome.less";

//********************************************//

@font-face {
    font-family: 'titan';
    src: url('../fonts/TitanOne-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'lane';
    src: url('../fonts/LANENAR.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'wide';
    src: url('../fonts/DISCO.ttf');
    font-weight: normal;
    font-style: normal;
}

@pink: #fc9d9a;
@blue: #506873;
@violet: #633E54;

.pink-text {
    color: lighten(@pink, 0%);
}

.signature {
    font-family: titan, sans-serif;
}

@-webkit-keyframes bulle_flow {
    0% { -webkit-transform: translate3d(0, 0, 0); }
    100% { -webkit-transform: translate3d(0, 10px, 0); }
}

@keyframes bulle_flow {
    0% { transform: translate3d(0, 0, 0); }
    100% { transform: translate3d(0, 10px, 0); }
}

.view {
    width: 100%;
    min-height: 500px;
    overflow-x: hidden;
}

#hero {
    background: @pink url(../img/dotted.png) repeat;
    padding-top: 100px;
    .announce-text {
        margin: 20px 5px;
        padding: 10px 20px;
        border-top: 1px solid desaturate(@pink, 50%);
        border-bottom: 1px solid desaturate(@pink, 50%);
        color: #FFF;
        line-height: 1.5;
    }
    .bulle {
        .size(250px, 250px);
        padding: 60px 30px;
        margin: 0 auto;
        color: #FFF;
        position: relative;
        background: url(../img/bulle_bleue.png) no-repeat center;
        background-size: contain;
        .animation(bulle_flow 1s alternate infinite);
        margin-left: -50px;
        margin-top: -50px;
        @media (max-width: @screen-xs-max) {
            margin-left: auto;
            margin-top: 0;
        }
        h3 {
            margin-top: 9px;
        }
    }
    .xd-and-uki {
        .center-block();
        width: 50%;
        @media (max-width: @screen-xs-max) {
            width: 90%;
        }
    }
}

#bigday {
    background: url(../img/thebigday.jpg) no-repeat center;
    background-size: cover;
    height: 700px;
    padding: 300px 0;
    @media (max-width: @screen-xs-max) {
        padding-top: 150px;
    }
    > h1 {
        font-size: 100px;
        color: #f0f0f0;
        font-weight: bold;
        font-family: 'titan', sans-serif;
        text-shadow: 0 10px 10px rgba(0, 0, 0, .5);
    }
}

#map-canvas {
    .size(100%, 600px);
    @media (max-width: @screen-xs-max) {
        width: 100%;
    }
    background: url('../img/map.png') no-repeat bottom right;
    //background-size: cover;
}

#where {
    position: relative;
    .address-wrapper {
        position: absolute;
        z-index: 1;
        top: 50px;
        left: 20%;
        .square(250px);
        border-radius: 50%;
        border: 20px solid @blue;
        border-color: rgba(red(@blue), green(@blue), blue(@blue), .3);
        overflow: hidden;
    }
    address {
        .square(100%);
        padding: 60px 20px;
        background: @blue url(../img/dotted.png) repeat;
        background-color: rgba(red(@blue), green(@blue), blue(@blue), .9);
        color: #fff;
        h4 {
            margin-bottom: 30px;
        }
    }
    .anchorBL {
        display: none !important;
    }
}

#information {
    background: @violet url(../img/etoiles.png) repeat center;
    color: #f0f0f0;
    padding: 30px 0;
    .subtitle {
        margin-top: 40px;
    }
}

#contact {
    padding: 20px 0;
    .copyright {
        font-family: wide, sans-serif;
        font-size: 20px;
    }
    .thanks {
        max-width: 305px;
        margin: 20px auto;
        padding: 20px 0 10px;
        border-top: 1px solid lighten(@pink, 10%);
        border-bottom: 1px solid lighten(@pink, 10%);
    }
    article {
        max-width: 500px;
        .center-block();
    }
}

